# ProjektPingPong

./: .gitignore  PingPongTracking.sln  README.md  Recipeciemno.precipe  acA1920-155uc_21562281ciemno.pfs  trajektoria.txt
LEFT/: CMakeLists.txt  LEFT.h  LEFTArray.h  LEFTCameraEventHandler.h  LEFTCameraParams.h  LEFTChunkDataParams.h  LEFTConfigurationEventHandler.h  LEFTEventParams.h  LEFTGrabResultData.h  LEFTGrabResultPtr.h  LEFTImageEventHandler.h  LEFTSample.cpp  LEFTStreamParams.h  LEFTTLParams.h
Nowy folder/: BaslerCamera123.h  BaslerCamera123Array.h  BaslerCamera123CameraEventHandler.h  BaslerCamera123CameraParams.cpp  BaslerCamera123CameraParams.h  BaslerCamera123ChunkDataParams.cpp  BaslerCamera123ChunkDataParams.h  BaslerCamera123ConfigurationEventHandler.h  BaslerCamera123EventParams.cpp  BaslerCamera123EventParams.h  BaslerCamera123GrabResultData.h  BaslerCamera123GrabResultPtr.h  BaslerCamera123ImageEventHandler.h  BaslerCamera123StreamParams.cpp  BaslerCamera123StreamParams.h  BaslerCamera123TLParams.cpp  BaslerCamera123TLParams.h
RIGHT/: CMakeLists.txt  RIGHT.h  RIGHTArray.h  RIGHTCameraEventHandler.h  RIGHTCameraParams.h  RIGHTChunkDataParams.h  RIGHTConfigurationEventHandler.h  RIGHTEventParams.h  RIGHTGrabResultData.h  RIGHTGrabResultPtr.h  RIGHTImageEventHandler.h  RIGHTSample.cpp  RIGHTStreamParams.h  RIGHTTLParams.h
Scanner3D/: Scanner3D.vcxproj  Scanner3D.vcxproj.filters  graphic_fcn.c  graphic_fcn.h  init_system_fcn.c  init_system_fcn.h  main.c  main.h  main_threads.c  main_threads.h  math_fcn.c  math_fcn.h  print_fcn.c  print_fcn.h
(+1 files in other folders)
